--- a/config/gs-config.yaml
+++ b/config/gs-config.yaml
@@ -26,6 +26,7 @@ groundstation:
     position_elevation:  # Position of pointing direction of antenna in elevation axis in percent of image height
 controller:
   application_port: 8050  # Port of the web application which will show the results
+  application_ip: "127.0.0.1"
   target_object: "Sun"  # Name of the astronomical object which shall be tracked e.g. sun, moon, sagittarius a*, ...
   target_frequency: 10.1e9
   step_size_azimuth:
